Login With Google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,14 @@
 <resources>
     <string name="app_name">AppNews</string>
+
+    <!--
+    LOGIN ACTIVITY
+    -->
+    <string name="login">LOGIN</string>
+
+    <!--
+    MAIN ACTIVITY
+    -->
+    <string name="user">NAME</string>
+
 </resources>
