Login With Google

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,7 @@
     <!--
     LOGIN ACTIVITY
     -->
+    <string name="appnews">APPNEWS</string>
     <string name="login">LOGIN</string>
 
     <!--
