--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,29 @@
     -->
     <string name="user">NAME</string>
 
+    <!--
+    API
+    -->
+    <string name="URL">/v1/latest-news?language=en&amp;apiKey=ogNGuP76wuSgH33lpP-3peLhFK4OMsCU0anyd7QqnuXqG6ET</string>
+
+    <!--
+    FILTER ACTIVITY
+    -->
+    <string name="business">BUSINESS</string>
+    <string name="entertainment">ENTERTAINMENT</string>
+    <string name="general">GENERAL</string>
+    <string name="health">HEALTH</string>
+    <string name="science">SCIENCE</string>
+    <string name="sports">SPORTS</string>
+    <string name="technology">TECHNOLOGY</string>
+    <string name="all">ALL</string>
+    <string name="returnB">RETURN</string>
+
+    <!--
+    SETTINGS
+    -->
+    <string name="countries">COUNTRY</string>
+    <string name="languages">LANGUAGE</string>
+    <string name="accept">ACCEPT</string>
+
 </resources>
