final version 2.0(fixed search and settings)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,7 @@
     <string name="technology">TECHNOLOGY</string>
     <string name="all">ALL</string>
     <string name="returnB">RETURN</string>
+    <string name="latest">LATEST</string>
     <string name="keywords">KEYWORDS</string>
 
     <!--
